Modul pre Orchard CMS - testovanie Dynamics NAV webservisov - SOAP & OData, INFO: Dll neexistuje - v pripade problemu s chybajucou DLL (ktora vsak existuje v custom module) je potrebne pridat dany nuget package aj do Orchard.Web projektu  - Pr. pri testovani Dynamics NAV Odata webservisu bolo potrebne do modulu pridat nuget pre "Microsoft.Data.Edm", pri debugovany sa vyskytla exception s info, ze tato DLL chyba, po pridany nugetu aj do projektu "Orchard.Web" bol problem odstraneny Pozri: http://www.szmyd.com.pl/blog/referencing-custom-assemblies-in-orchard-module#.W63VjWgzZaQ

--- a/Orchad.DynamicsNavPov/Orchad.DynamicsNavPov.csproj
+++ b/Orchad.DynamicsNavPov/Orchad.DynamicsNavPov.csproj
@@ -50,6 +50,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Data.Edm, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Data.Edm.5.6.4\lib\net40\Microsoft.Data.Edm.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.OData, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Data.OData.5.6.4\lib\net40\Microsoft.Data.OData.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.Services.Client, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Data.Services.Client.5.6.4\lib\net40\Microsoft.Data.Services.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
@@ -60,6 +69,9 @@
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Spatial, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Spatial.5.6.4\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -92,6 +104,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\DynamicsNavOdataService\WebService.cs" />
     <Compile Include="Controllers\DynamicsNavWebServicePocController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -147,6 +160,7 @@
     </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Connected Services\DynamicsNavOdataService\ConnectedService.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -156,6 +170,7 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
     <Content Include="Views\DynamicsNavWebServicePoc\Index.cshtml" />
+    <Content Include="Views\DynamicsNavWebServicePoc\IndexOdata.cshtml" />
     <None Include="Web References\WebService\Customer.wsdl" />
     <Content Include="Web References\WebService\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
