--- a/Orchad.DynamicsNavPov/packages.config
+++ b/Orchad.DynamicsNavPov/packages.config
@@ -3,5 +3,9 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net452" />
 </packages>
